compiler/testData/diagnostics/tests/Infix.diag.txt
/Infix.kt:14:1: error: 'infix' modifier is inapplicable on this function: must have a single value parameter
infix fun Example.toExtWithExtraParams(other: Example, blah: Int = 0) = Pair(this, other)
^^^^^
/Infix.kt:17:1: error: 'infix' modifier is inapplicable on this function: must have a single value parameter
infix fun Example.toExtDefaultValues(other: Example? = null, blah: Int = 0) = Pair(this, other)
^^^^^
/Infix.kt:24:15: error: 'infix' modifier is required on 'toNonInfix' in 'Example'
    Example() toNonInfix Example()
              ^^^^^^^^^^
/Infix.kt:31:7: error: 'infix' modifier is required on 'toExtNonInfix' in ''
    a toExtNonInfix b
      ^^^^^^^^^^^^^
/Infix.kt:35:7: error: 'infix' modifier is required on 'toExtNonInfixWithExtraParams' in ''
    a toExtNonInfixWithExtraParams b
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/Infix.kt:38:7: error: 'infix' modifier is required on 'toExtNonInfixDefaultValues' in ''
    a toExtNonInfixDefaultValues b
      ^^^^^^^^^^^^^^^^^^^^^^^^^^
/Infix.kt:40:7: error: 'infix' modifier is required on 'withLambda' in ''
    a withLambda { }
      ^^^^^^^^^^
